--- a/style.css
+++ b/style.css
@@ -1334,6 +1334,11 @@ button.before-gallery img:hover {
     margin-left: -100vw;
   }
 }
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .footer {
   color: white;
   background-color: #2c3e50;
@@ -1349,6 +1354,7 @@ button.before-gallery img:hover {
 .footer_title {
   text-transform: uppercase;
   font-size: 1.5rem;
+  padding-bottom: 25px;
 }
 
 .footer_address {
@@ -1361,7 +1367,7 @@ button.before-gallery img:hover {
 }
 
 .svg_button {
-  display: inline-block;
+  display: inline-flex;
   border: 2px solid white;
   padding: 10px;
   border-radius: 50%;
@@ -1371,6 +1377,15 @@ button.before-gallery img:hover {
 .svg {
   height: 25px;
   width: 25px;
+  color: white;
+}
+
+.svg_button:hover {
+  background-color: white;
+}
+
+.svg_button:hover .svg {
+  color: black;
 }
 
 .footer_copyright {
