--- a/style.css
+++ b/style.css
@@ -1439,21 +1439,85 @@ button.before-gallery img:hover {
     bottom: 5px;
   }
 }
-.tampilkan {
-  display: block;
-  position: fixed;
 
-  right: 5px;
-  bottom: 5px;
+/* Karya Mahasiswa */
+h1{
+    font-size: 4rem;
+    margin-top: 2rem;
+    text-align: center;
+    color: #023047;
+}
 
-  padding: 15px;
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) );
+    grid-template-rows: auto;
+    gap: 30px;
+}
 
-  color: white;
-  background-color: #1a252f;
-  border-radius: 25px;
-  font-family: sans-serif;
-  text-decoration: none;
-  cursor: pointer;
-  animation: move 7s 2;
-  animation-delay: 8s;
+.gallery img{
+    width: 100%;
+    padding: 5px;
+    background: #a3bccb;
+    border-radius: 25px;
+    border: 2px solid #f5f5f5;
+    transition: all 0.3s ease;
+}
+
+.gallery img:hover{
+    scale: 105%;
+}
+
+/* SUEVEY */
+.survey-form {
+    max-width: 800px;
+    min-width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+}
+  
+h2 {
+    text-align: center;
+}
+  
+.form-group {
+    margin-bottom: 20px;
+}
+  
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+  
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+  
+input[type="range"] {
+    width: 100%;
+}
+  
+button[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+
+  
+.attribute{
+    position: absolute;
+    bottom: 10px;
 }
