--- a/style.css
+++ b/style.css
@@ -1362,6 +1362,13 @@ button.before-gallery img:hover {
   font-weight: 300;
 }
 
+.footer_whatsapp > a {
+
+  color: white;
+  padding-bottom: 10px;
+
+}
+
 .footer_social {
   margin-bottom: 20px;
 }
